ecmascript/parser/tests/typescript-errors/tsc/es6/destructuring/destructuringParameterDeclaration6/input.ts.stderr
error: Expected ident
 --> $DIR/tests/typescript-errors/tsc/es6/destructuring/destructuringParameterDeclaration6/input.ts:9:14
  |
9 | function a4([while, for, public]){ }
  |              ^^^^^

error: Cannot use a reserved word as a shorthand property
 --> $DIR/tests/typescript-errors/tsc/es6/destructuring/destructuringParameterDeclaration6/input.ts:7:13
  |
7 | function a({while}) { }
  |             ^^^^^

error: Cannot use a reserved word as a shorthand property
 --> $DIR/tests/typescript-errors/tsc/es6/destructuring/destructuringParameterDeclaration6/input.ts:8:14
  |
8 | function a1({public}) { }
  |              ^^^^^^

